data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4460.wast
;; 9. **Test Description:** Generate scenarios with multiple tables and mixed usage of `call_indirect` instructions to verify that the function table indices are properly resolved and isolation between tables maintained.    - **Constraint:** Ensures correct table indexing and isolation.    - **Improper Handling Relation:** Incorrect table isolation could lead to cross-table function invocations and unexpected behavior.

(assert_invalid
  (module
    (type (func))
    (type (func (result i32)))
    (table 2 funcref)
    (elem (i32.const 0) $func0 $func1)
    (func $func0 (result i32) (i32.const 0))
    (func $func1 (result f64) (f64.const 0.0))
    (func (call_indirect (type 0) (i32.const 1)))
  )
  "type mismatch"
)